--- a/app/src/main/res/layout/content_photo_detail.xml
+++ b/app/src/main/res/layout/content_photo_detail.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.frischman.uri.flickrbrowser.PhotoDetailActivity"
     tools:showIn="@layout/activity_photo_detail">
 
@@ -32,13 +31,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
 
                 <ImageView
                     android:id="@+id/photo_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
+                    android:contentDescription="@string/browse_image_description"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/placeholder"/>
 
@@ -47,14 +47,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
 
                 <TextView
                     android:id="@+id/photo_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="TextView"/>
+                    tools:text="TextView"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
